# condex

./: Cargo.toml
prompts/: system.txt
src/: events.rs  lib.rs  llm.rs  main.rs  widgets.rs
src/llm/: async_tests.rs  client.rs  integration_tests.rs  types.rs
src/widgets/: body.rs  input_box.rs  message.rs  title.rs
