[package]
name = "condex"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.30.0", features = ["serde"] }
rayon = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
mockito = "1.6"
